--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -42,7 +42,15 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.button-container {
+  appearance: none;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+button.button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -53,11 +61,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button.button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button.button:focus,
+button.button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -69,7 +77,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  button.button {
     background-color: #f9f9f9;
   }
 }
